--- a/index.html
+++ b/index.html
@@ -351,89 +351,85 @@ ____________________ -------->
 
 <!-- 🎛️ Unified Mode Switcher (old look, new system) -->
 <div class="modeSwitchBar f18-c heading-1" role="group" aria-label="Choose between Express and Rewrite modes">
-  <!-- Express button -->
-  <button
-    id="modeExpressBtn"
-    class="mode-btn"
-    type="button"
-    aria-pressed="true"
-    role="tab"
-    aria-selected="true"
-    aria-controls="modeViewExpress"
-  >
-    EXPRESS
-  </button>
-
-  <!-- Middle switcher icon -->
-  <button
-    id="btnModeSwitch"
-    class="mode-switch-btn"
-    type="button"
-    aria-label="Switch to rewrite mode"
-    title="Switch to rewrite mode"
-  >
-    <svg
-      class="mode-switch-svg btn-icon modeSwitchSvg"
-      xmlns="http://www.w3.org/2000/svg"
-      width="18"
-      height="12"
-      viewBox="0 0 14.88 12.27"
-      focusable="false"
-      aria-hidden="true"
+  <div class="mode-switch-cluster">
+    <!-- Express button -->
+    <button
+      id="modeExpressBtn"
+      class="mode-btn"
+      type="button"
+      aria-pressed="true"
+      role="tab"
+      aria-selected="true"
+      aria-controls="modeViewExpress"
     >
-      <g id="ModeSwitchBtn-v2">
-        <polygon id="inactivearrow" fill="currentColor" points="0.2 6.13 6.35 0.2 6.35 3.48 11.02 3.48 11.02 8.79 6.35 8.79 6.35 12.07 0.2 6.13" />
-        <polygon id="bigarrow" fill="currentColor" points="3.69 6.13 9.36 0 9.36 2.77 14.88 2.77 14.88 9.5 9.36 9.5 9.36 12.27 3.69 6.13" />
-        <polygon id="lilarrow" fill="currentColor" points="6.32 6.13 11.3 1.78 11.3 4.77 14.14 4.77 14.14 7.49 11.3 7.49 11.3 10.48 6.32 6.13" />
-      </g>
-    </svg>
-  </button>
+      EXPRESS
+    </button>
 
-  <!-- Rewrite button -->
-  <button
-    id="modeRewriteBtn"
-    class="mode-btn"
-    type="button"
-    aria-pressed="false"
-    role="tab"
-    aria-selected="false"
-    aria-controls="modeViewRewrite"
-  >
-    REWRITE
+    <!-- Middle switcher icon -->
+    <button
+      id="btnModeSwitch"
+      class="mode-switch-btn"
+      type="button"
+      aria-label="Switch to rewrite mode"
+      title="Switch to rewrite mode"
+    >
+      <svg
+        class="mode-switch-svg btn-icon modeSwitchSvg"
+        xmlns="http://www.w3.org/2000/svg"
+        width="18"
+        height="12"
+        viewBox="0 0 14.88 12.27"
+        focusable="false"
+        aria-hidden="true"
+      >
+        <g id="ModeSwitchBtn-v2">
+          <polygon id="inactivearrow" fill="currentColor" points="0.2 6.13 6.35 0.2 6.35 3.48 11.02 3.48 11.02 8.79 6.35 8.79 6.35 12.07 0.2 6.13" />
+          <polygon id="bigarrow" fill="currentColor" points="3.69 6.13 9.36 0 9.36 2.77 14.88 2.77 14.88 9.5 9.36 9.5 9.36 12.27 3.69 6.13" />
+          <polygon id="lilarrow" fill="currentColor" points="6.32 6.13 11.3 1.78 11.3 4.77 14.14 4.77 14.14 7.49 11.3 7.49 11.3 10.48 6.32 6.13" />
+        </g>
+      </svg>
+    </button>
+
+    <!-- Rewrite button -->
+    <button
+      id="modeRewriteBtn"
+      class="mode-btn"
+      type="button"
+      aria-pressed="false"
+      role="tab"
+      aria-selected="false"
+      aria-controls="modeViewRewrite"
+    >
+      REWRITE
+    </button>
+  </div>
+
+  <button id="editorMaximizeBtn" class="mode-utility-btn btn-discreet" type="button" aria-label="Maximize editor" aria-pressed="false" title="Maximize editor">
+    <span class="icon icon-expand" aria-hidden="true">
+      <svg xmlns="http://www.w3 .org/2000/svg" width="8.49" height="8.54" viewBox="0 0 8.49 8.54" >
+        <g>
+          <path d="M.82,4.02V1.13c0-.41.34-.75.75-.75h5.79c.41,0,.75.34.75.75v5.79c0,.41-.34.75-.75.75h-2.9" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+          <line x1=".38" y1="8.16" x2="4.53" y2="4.01" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M5.47,5.33l-2.26-2.26c-.17-.17-.05-.46.19-.46h2.26c.15,0,.27.12.27.27v2.26c0,.24-.29.36-.46.19Z" stroke-width="0px"/>
+        </g>
+      </svg>
+    </span>
+    <span class="icon icon-collapse" aria-hidden="true">
+      <svg xmlns="http://www.w3.org/2000/svg" width="8.49" height="8.54" viewBox="0 0 8.49 8.54" >
+        <g>
+          <path d="M.82,4.02V1.13c0-.41.34-.75.75-.75h5.79c.41,0,.75.34.75.75v5.79c0,.41-.34.75-.75.75h-2.9" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+          <line x1=".38" y1="8.16" x2="4.53" y2="4.01" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M5.47,5.33l-2.26-2.26c-.17-.17-.05-.46.19-.46h2.26c.15,0,.27.12.27.27v2.26c0,.24-.29.36-.46.19Z" stroke-width="0px"/>
+        </g>
+      </svg>
+    </span>
+    <span class="sr-only">Maximize editor</span>
   </button>
 </div>
 
 
     <div class="he-mode-views">
       <div id="modeViewExpress" class="he-mode-view panel" role="tabpanel" aria-labelledby="modeExpressBtn">
-
-    <div class="express-panel-header">
-
-      <div class="express-panel-actions express-editor-top-overlay">
-        <button id="editorMaximizeBtn" class="btn-discreet" type="button" aria-label="Maximize editor" aria-pressed="false" title="Maximize editor">
-          <span class="icon icon-expand" aria-hidden="true">
-            <svg xmlns="http://www.w3 .org/2000/svg" width="8.49" height="8.54" viewBox="0 0 8.49 8.54" >
-              <g>
-                <path d="M.82,4.02V1.13c0-.41.34-.75.75-.75h5.79c.41,0,.75.34.75.75v5.79c0,.41-.34.75-.75.75h-2.9" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
-                <line x1=".38" y1="8.16" x2="4.53" y2="4.01" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M5.47,5.33l-2.26-2.26c-.17-.17-.05-.46.19-.46h2.26c.15,0,.27.12.27.27v2.26c0,.24-.29.36-.46.19Z" stroke-width="0px"/>
-              </g>
-            </svg>
-          </span>
-          <span class="icon icon-collapse" aria-hidden="true">
-            <svg xmlns="http://www.w3.org/2000/svg" width="8.49" height="8.54" viewBox="0 0 8.49 8.54" >
-              <g>
-                <path d="M.82,4.02V1.13c0-.41.34-.75.75-.75h5.79c.41,0,.75.34.75.75v5.79c0,.41-.34.75-.75.75h-2.9" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
-                <line x1=".38" y1="8.16" x2="4.53" y2="4.01" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M5.47,5.33l-2.26-2.26c-.17-.17-.05-.46.19-.46h2.26c.15,0,.27.12.27.27v2.26c0,.24-.29.36-.46.19Z" stroke-width="0px"/>
-              </g>
-            </svg>
-          </span>
-          <span class="sr-only">Maximize editor</span>
-        </button>
-      </div>
-    </div>
-    </div>
     <!-- V2: pick UI removed -->
     <!-- Editor row -->
     <div id="codeEditor"></div>
