first force push attempt

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ ____________________ -------->
   </label>
 
   <!-- Context menu for bank actions -->
-  <ul id="bankSelectMenu" class="context-menu hide-when-editor-maximized"></ul>
+  <ul id="bankSelectMenu" class="context-menu"></ul>
 </div>
 
 
@@ -656,17 +656,18 @@ ____________________ -------->
 
       </div>
     </div> <!-- end of modeviews-->
+  </section>
+<!-- #endregion ^^^ End Express 🖥️ ^^^ -->
 
-    <div id="bottomControls">
 
 <!-- #region 🎛️🎛️🎛️ Express CONTROLS ===================================------------------
 ____________________ -------->
 
 
   <!-- =============== Main button Row ==============-->
-        <!-- =======================[+]=====================-->
-
-
+	<!-- =======================[+]=====================-->
+	
+	
     <!-- Custom Search controls -->
     <div id="customSearch-Master" class="customSearch-master">
       <div class="row">
@@ -787,7 +788,7 @@ ____________________ -------->
     <!-- Apply buttons -->
 <div id="expressApplyRow" class="express-apply">
     <div class="row btns apply-row">
-
+  
 
 
 <!-- 🟧🟧🟧 Rhombus Button -->
@@ -851,10 +852,10 @@ ____________________ -------->
 </div>
 
   <!-- ================ Romby boi ==============-->
-        <!-- =======================[+]=====================-->
+	<!-- =======================[+]=====================-->
 
 
-
+    
 <!----_-_-_-_-_-_-_---------------------------------------\--\--->
 <!-- #endregion ^^^ End Apply 🔵 ^^^ -->
 
@@ -891,14 +892,7 @@ ____________________ -------->
  <!----_-_-_-_-_-_-_---------------------------------------\--\--->
 <!-- #endregion ^^^ End Misc ⚪ ^^^ -->
 
-    </div>
-
-    </div>
-
-    </div>
-    </div>
-  </section>
-<!-- #endregion ^^^ End Express 🖥️ ^^^ -->
+  </div>
 
   </div> <!-- end appRoot -->
 
