restored lost layout changes

--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@ ____________________ -------->
     <!-- Custom Search controls -->
     <div id="customSearch-Master" class="customSearch-master">
       <div class="row">
-        <label class="checkbox-label text-sm checkbox-Diamond">
+        <label class="checkbox-label text-sm checkbox-Diamond customSearch-checkbox">
           <input
           id="useCustomSearch"
           type="checkbox"
