--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@ ____________________ -------->
    
  <!-- V1 — Flyover Trigger Button -->
 
-        <button class="tab-btn" id="reloadPanel">Reload</button>
-  <button  class="tab-btn" id="exposeBtn">Expose</button>
+        
 
-  <button id="quickAccessLaunchBtn" class="tab-btn">Quickpanel</button>
+
+
 
 
   </section>
@@ -847,9 +847,12 @@ ____________________ -------->
   </svg>
 </button>
 
+<button class="tab-btn" id="reloadPanel">Reload</button>
       <!--<button id="applyTargetBtn" class="apply-target-btn">Apply</button>-->
     </div>
 </div>
+
+    <!-- <button id="quickAccessLaunchBtn" class="tab-btn">QckPnl</button>-->
 
   <!-- ================ Romby boi ==============-->
 	<!-- =======================[+]=====================-->
@@ -865,8 +868,8 @@ ____________________ -------->
 
 
 
-
-    <!-- Apply Report toggle + box -->
+  <!-- 
+-
 <div id="expressMisc" class="express-misc">
     <div class="row bottom-row">
       <button id="openApplyLog" class="log-button text-sm" title="Open Apply Log">Log</button>
@@ -875,7 +878,7 @@ ____________________ -------->
     <button id="openFullEditorBtn" class="btn-discreet">Expand Editor</button>
 
     </div>
-
+-->
 <!-- Target box
     <div id="TargetBox" class="panel shade-hard">
     <div id="TargetList">No results yet</div>
