Refactor button logic for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -335,11 +335,8 @@ ____________________ -------->
 
 
 
-  <!-- ============================
-       Defunct tab section??-->
-  <section id="expressions" class="tab active hide-when-editor-maximized">
+  <!-- ============================-->
 
-  </section>
 
 
 
@@ -588,53 +585,7 @@ ____________________ -------->
                    <div class="rewrite-gradient-down" aria-hidden="true"></div>
         </div>
         <div id="rewriteOverlay">
-          <div class="rewrite-checkbox-block">
-            <div class="row search-options">
-              <label class="checkbox-label text-sm checkbox-Diamond">
-                <input
-                id="matchCase"
-                type="checkbox"
-                checked
-                >
-                <svg
-                class="btn-icon"
-                xmlns="http://www.w3.org/2000/svg"
-                width="12.47"
-                height="12.47"
-                viewBox="0 0 12.47 12.47"
-                >
-                  <g id="checkbox-diamond">
-                    <rect
-                      x="1.76"
-                      y="1.74"
-                      width="8.95"
-                      height="8.98"
-                      rx="1.46"
-                      ry="1.46"
-                      transform="translate(6.23 -2.58) rotate(45)"
-                      fill="currentColor"
-                      stroke-miterlimit="10"
-                    />
-                  </g>
-                </svg>
-                Match case
-              </label>
-            </div>
-          </div>
-          <span class="rewrite-typography-label" aria-hidden="true">Aa</span>
-          <svg
-          class="rewrite-typography-diamond btn-icon"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 12.47 12.47"
-          focusable="false"
-          aria-hidden="true"
-          >
-            <polygon
-              points="6.24 0.35 12.12 6.24 6.24 12.12 0.35 6.24 6.24 0.35"
-              fill="currentColor"
-              stroke-miterlimit="10"
-            />
-          </svg>
+
           <button
           id="rewriteClearBtn"
           class="btn-clearSVG"
@@ -848,6 +799,7 @@ ____________________ -------->
 </button>
 
 <button class="tab-btn" id="reloadPanel">Reload</button>
+      <button class="tab-btn" id="NEW_forCustomer_openLogButton">History</button>
       <!--<button id="applyTargetBtn" class="apply-target-btn">Apply</button>-->
     </div>
 </div>
@@ -873,7 +825,7 @@ ____________________ -------->
 <div id="expressMisc" class="express-misc">
     <div class="row bottom-row">
       <button id="openApplyLog" class="log-button text-sm" title="Open Apply Log">Log</button>
-      <button id="NEW_forCustomer_openLogButton" class="btn-discreet">History</button>
+
       <button id="openThemePicker" class="btn-theme text-sm" title="Adjust Theme Color">Theme</button>
     <button id="openFullEditorBtn" class="btn-discreet">Expand Editor</button>
 
