--- a/index.html
+++ b/index.html
@@ -370,19 +370,33 @@ ____________________ -------->
       aria-label="Switch to rewrite mode"
       title="Switch to rewrite mode"
     >
+      <!-- Rewrite Mode Icon -->
       <svg
-        class="mode-switch-svg btn-icon modeSwitchSvg"
+        class="mode-switch-svg modeSwitchSvg modeSwitch-rewrite"
         xmlns="http://www.w3.org/2000/svg"
-        width="18"
-        height="12"
         viewBox="0 0 14.88 12.27"
-        focusable="false"
         aria-hidden="true"
+        focusable="false"
       >
-        <g id="ModeSwitchBtn-v2">
-          <polygon id="inactivearrow" fill="currentColor" points="0.2 6.13 6.35 0.2 6.35 3.48 11.02 3.48 11.02 8.79 6.35 8.79 6.35 12.07 0.2 6.13" />
-          <polygon id="bigarrow" fill="currentColor" points="3.69 6.13 9.36 0 9.36 2.77 14.88 2.77 14.88 9.5 9.36 9.5 9.36 12.27 3.69 6.13" />
-          <polygon id="lilarrow" fill="currentColor" points="6.32 6.13 11.3 1.78 11.3 4.77 14.14 4.77 14.14 7.49 11.3 7.49 11.3 10.48 6.32 6.13" />
+        <g>
+          <polygon id="rewrite-inactivearrow" fill="currentColor" points="0.2 6.13 6.35 0.2 6.35 3.48 11.02 3.48 11.02 8.79 6.35 8.79 6.35 12.07 0.2 6.13" />
+          <polygon id="rewrite-bigarrow" fill="currentColor" points="3.69 6.13 9.36 0 9.36 2.77 14.88 2.77 14.88 9.5 9.36 9.5 9.36 12.27 3.69 6.13" />
+          <polygon id="rewrite-lilarrow" fill="currentColor" points="6.32 6.13 11.3 1.78 11.3 4.77 14.14 4.77 14.14 7.49 11.3 7.49 11.3 10.48 6.32 6.13" />
+        </g>
+      </svg>
+
+      <!-- Express Mode Icon -->
+      <svg
+        class="mode-switch-svg modeSwitchSvg modeSwitch-express"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 14.88 12.27"
+        aria-hidden="true"
+        focusable="false"
+      >
+        <g>
+          <polygon id="express-inactivearrow" fill="currentColor" points="0.2 6.13 6.35 0.2 6.35 3.48 11.02 3.48 11.02 8.79 6.35 8.79 6.35 12.07 0.2 6.13" />
+          <polygon id="express-bigarrow" fill="currentColor" points="3.69 6.13 9.36 0 9.36 2.77 14.88 2.77 14.88 9.5 9.36 9.5 9.36 12.27 3.69 6.13" />
+          <polygon id="express-lilarrow" fill="currentColor" points="6.32 6.13 11.3 1.78 11.3 4.77 14.14 4.77 14.14 7.49 11.3 7.49 11.3 10.48 6.32 6.13" />
         </g>
       </svg>
     </button>
