--- a/index.html
+++ b/index.html
@@ -663,6 +663,7 @@ ____________________ -------->
           </button>
 
           <button class="tab-btn" id="reloadPanel">Reload</button>
+            <button  class="tab-btn" id="exposeBtn">Expose</button>
           <button class="tab-btn" id="NEW_forCustomer_openLogButton">History</button>
           <button id="quickAccessLaunchBtn" class="tab-btn">QckPnl</button>
           <!--<button id="applyTargetBtn" class="apply-target-btn">Apply</button>-->
