ye codex audits included

--- a/index.html
+++ b/index.html
@@ -661,16 +661,17 @@ ____________________ -------->
                 fill="currentColor" />
             </svg>
           </button>
-
-          <button class="tab-btn" id="reloadPanel">Reload</button>
-            <button  class="tab-btn" id="exposeBtn">Expose</button>
-          <button class="tab-btn" id="NEW_forCustomer_openLogButton">History</button>
-          <button id="quickAccessLaunchBtn" class="tab-btn">QckPnl</button>
           <!--<button id="applyTargetBtn" class="apply-target-btn">Apply</button>-->
         </div>
       </div>
 
-      <!-- <button id="quickAccessLaunchBtn" class="tab-btn">QckPnl</button>-->
+      <!-- Dev / utility buttons -->
+      <div class="row btns dev-row">
+        <button class="tab-btn" id="reloadPanel">Reload</button>
+        <button class="tab-btn" id="exposeBtn">Expose</button>
+        <button class="tab-btn" id="NEW_forCustomer_openLogButton">History</button>
+        <button id="quickAccessLaunchBtn" class="tab-btn">QckPnl</button>
+      </div>
 
       <!-- ================ Romby boi ==============-->
       <!-- =======================[+]=====================-->
